--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/ShorelineExamProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfoenix-8.0.1.jar=libraries\\jfoenix-8.0.1.jar
+file.reference.sqljdbc42.jar=libraries\\sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
