--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,8 +29,14 @@ dist.jar=${dist.dir}/ShorelineExamProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.1.jar=libraries\\ooxml-lib\\commons-collections4-4.1.jar
+file.reference.curvesapi-1.04.jar=libraries/ooxml-lib/curvesapi-1.04.jar
 file.reference.jfoenix-8.0.1.jar=libraries\\jfoenix-8.0.1.jar
+file.reference.poi-3.17.jar=libraries/ooxml-lib/poi-3.17.jar
+file.reference.poi-ooxml-3.17.jar=libraries/ooxml-lib/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=libraries/ooxml-lib/poi-ooxml-schemas-3.17.jar
 file.reference.sqljdbc42.jar=libraries\\sqljdbc42.jar
+file.reference.xmlbeans-2.6.0.jar=libraries/ooxml-lib/xmlbeans-2.6.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,10 +44,17 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -104,6 +116,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
