--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.commons-collections4-4.1.jar=libraries\\ooxml-lib\\commons-collections4-4.1.jar
 file.reference.curvesapi-1.04.jar=libraries/ooxml-lib/curvesapi-1.04.jar
 file.reference.jfoenix-8.0.1.jar=libraries\\jfoenix-8.0.1.jar
+file.reference.json-simple-1.1.1.jar=libraries\\json-simple-1.1.1.jar
 file.reference.poi-3.17.jar=libraries/ooxml-lib/poi-3.17.jar
 file.reference.poi-ooxml-3.17.jar=libraries/ooxml-lib/poi-ooxml-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar=libraries/ooxml-lib/poi-ooxml-schemas-3.17.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
